--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,9 @@ DLProteinFormats = "df93d313-1126-4eb6-ac29-b325d5898587"
 Flowfusion = "5b4e93c8-7b6e-4682-b400-fc3b238f52b1"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardBackward = "e879419d-bb0f-4252-adee-d266c51ac92d"
+HuggingFaceApi = "3cc741c3-0c9d-4fbe-84fa-cdec264173de"
 InvariantPointAttention = "814a5788-1061-474f-a71f-873f087d5d12"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
 ProteinChains = "b8e8f2a5-48d3-44f1-ba0d-c71cb7726ff8"
@@ -23,7 +25,9 @@ DLProteinFormats = "0.1.0"
 Flowfusion = "0.1.1"
 Flux = "0.16.3"
 ForwardBackward = "0.1.0"
+HuggingFaceApi = "0.1.0"
 InvariantPointAttention = "0.1.3"
+JLD2 = "0.5.13"
 LinearAlgebra = "1"
 Onion = "0.1.0"
 ProteinChains = "0.7.2"
