--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,14 +23,11 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.10'
           - '1.11'
-          - 'pre'
         os:
           - ubuntu-latest
         arch:
           - x64
-          - x86
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
@@ -39,7 +36,7 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
       - name: registry_add
-        run: julia -e 'using Pkg; pkg"registry add https://github.com/MurrellGroup/MurrellGroupRegistry"'
+        run: julia -e 'using Pkg; Pkg.Registry.add(url="https://github.com/MurrellGroup/MurrellGroupRegistry")'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
@@ -65,6 +62,7 @@ jobs:
         shell: julia --project=docs --color=yes {0}
         run: |
           using Pkg
+          Pkg.Registry.add(url="https://github.com/MurrellGroup/MurrellGroupRegistry")
           Pkg.develop(PackageSpec(path=pwd()))
           Pkg.instantiate()
       - uses: julia-actions/julia-buildpkg@v1
